--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -29,4 +33,39 @@ main {
 
 .inactive {
   display: none;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #575e43;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
+.address {
+  margin-top: 2rem;
+  margin-bottom: 0.25rem;
+}
+.phone,
+.email {
+  margin: 0.25rem;
+  text-decoration: none;
+  color: black;
+}
+
+.opening_hours {
+  margin-bottom: 2rem;
+}
+
+.opening_text,
+.opening_weekdays,
+.opening_weekends {
+  margin: 0.5rem;
 }
