--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -1,7 +1,6 @@
 .carousel_container,
 .order_container,
 .error_container,
-.map_container,
 .form_container {
   display: flex;
   flex-direction: column;
@@ -9,6 +8,15 @@
   align-items: center;
   padding: 0;
   margin: 1rem 0;
+}
+
+.map_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 1rem 0 2rem;
 }
 
 .embla {
@@ -80,11 +88,12 @@
 .map_text {
   color: #a86e5f;
   font-weight: 500;
-  margin: 0.5rem;
+  margin: 0.5rem 0 0.25rem;
+  text-align: center;
 }
 
 .order_button {
-  margin: 0.5rem;
+  margin: 0.25rem 0 0.5rem;
 }
 
 .submit_button {
@@ -105,19 +114,27 @@
   background-color: #a5b381;
 }
 
-.form_input {
-  margin: 0.5rem;
-  border: 1px solid #a86e5f;
-  border-radius: 0.5rem;
-  padding: 0.25rem;
-  text-align: center;
-}
-
 .error {
   color: red;
   text-align: center;
 }
 
 .the_map {
-  padding: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 1rem;
+}
+
+.form_input {
+  border: #a86e5f solid 1px;
+  border-radius: 1rem;
+  padding: 0.25rem;
+  text-align: center;
+  margin: 0.25rem;
+}
+
+.form_label {
+  color: #a86e5f;
+  font-weight: 500;
+  margin: 0.5rem 0.5rem 0.25rem 0.5rem;
+  text-align: center;
 }
