--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -1,8 +1,20 @@
+.carousel_container,
+.order_container,
+.error_container,
+.map_container,
+.form_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 1rem 0;
+}
+
 .embla {
   position: relative;
   width: 80%;
   height: auto;
-  margin: 10%;
 }
 
 .embla__viewport {
@@ -52,27 +64,11 @@
   width: 2rem;
 }
 
-.order_container,
-.error_container,
-.map_container,
-.form_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-}
-
-.form_container {
-  margin: 1rem 0;
-  width: 100%;
-  padding: 0;
-}
-
-.order_box {
+.order_box,
+.form,
+.map_box {
   width: 80%;
   background-color: white;
-
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -80,7 +76,8 @@
   align-items: center;
 }
 
-.order_text {
+.order_text,
+.map_text {
   color: #a86e5f;
   font-weight: 500;
   margin: 0.5rem;
@@ -108,16 +105,6 @@
   background-color: #a5b381;
 }
 
-.form {
-  width: 80%;
-  background-color: rgb(255, 255, 255);
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .form_input {
   margin: 0.5rem;
   border: 1px solid #a86e5f;
@@ -131,11 +118,6 @@
   text-align: center;
 }
 
-.entire_map {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  background-color: white;
+.the_map {
+  padding: 1rem;
 }
