Fix react-datepicker times from grey to hide

--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -69,3 +69,11 @@ main {
 .opening_weekends {
   margin: 0.5rem;
 }
+
+.react-datepicker__time-container
+  .react-datepicker__time
+  .react-datepicker__time-box
+  ul.react-datepicker__time-list
+  li.react-datepicker__time-list-item--disabled {
+  display: none;
+}
