--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -1,4 +1,11 @@
-.carousel_container,
+.carousel_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0 0 1rem;
+}
 .order_container,
 .error_container,
 .form_container {
@@ -88,12 +95,8 @@
 .map_text {
   color: #a86e5f;
   font-weight: 500;
-  margin: 0.5rem 0 0.25rem;
+  margin: 0.5rem 0.5rem 0.25rem;
   text-align: center;
-}
-
-.order_button {
-  margin: 0.25rem 0 0.5rem;
 }
 
 .submit_button {
@@ -101,7 +104,6 @@
   margin-bottom: 0.5rem;
 }
 
-.order_button,
 .submit_button {
   border: none;
   background-color: #a86e5f;
@@ -110,7 +112,7 @@
   padding: 0.5rem 1rem;
 }
 
-.order_button:hover {
+.submit_button:hover {
   background-color: #a5b381;
 }
 
