--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -5,9 +5,93 @@
   align-items: center;
 }
 
-.date_picker {
+.entire_form {
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.form_label_date_picker,
+.form_label_amount,
+.form_label_email,
+.total_price_text {
+  color: #a86e5f;
+  font-weight: 800;
+  text-align: center;
+}
+.form_label_date_picker {
+  margin: 0 0.5rem 0.25rem;
+}
+
+.form_label_amount,
+.form_label_email,
+.total_price_text {
+  margin: 0.25rem 0.5rem 0.25rem;
+}
+
+.date_picker_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  width: 100%;
+}
+
+.amount_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.amount_selector {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.amount_number {
+  font-size: 2rem;
+}
+
+.amount_icon {
+  width: 20px;
+  font-size: 4rem;
+}
+
+.amount_error,
+.missing_item_error,
+.missing_dish_error,
+.missing_drink_error,
+.return_error {
+  color: red;
+  text-align: center;
+  padding: 1rem;
+}
+
+.return_error {
+  font-weight: 900;
+}
+
+.email_input {
+  border-radius: 1rem;
+  text-align: center;
+  border: 2px solid #a86e5f;
+  width: 50%;
+  display: block;
+  margin: 0.25rem auto;
+  padding: 0.5rem 1rem;
+}
+
+.submit_button {
+  border: none;
+  background-color: #a86e5f;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  margin: 0.25rem 0 0.5rem;
 }
