--- a/lil-bits/src/app/(routes)/select-dish/dish.module.css
+++ b/lil-bits/src/app/(routes)/select-dish/dish.module.css
@@ -1,4 +1,5 @@
-.dish_container {
+.dish_container,
+.dish_error_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,7 +61,12 @@
   margin: 0.5rem 0 0.5rem;
 }
 
-.current_order_box {
+.generate_button:hover {
+  background-color: #575e43;
+}
+
+.current_order_box,
+.dish_error_box {
   width: 80%;
   background-color: white;
   border-radius: 1rem;
@@ -69,4 +75,10 @@
   justify-content: center;
   align-items: center;
   margin: 0.5rem 0 0.5rem;
+}
+
+.dish_error {
+  color: red;
+  text-align: center;
+  padding: 1rem;
 }
