--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -1,8 +1,11 @@
-.form_container {
+.form_container,
+.order_error_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0;
+  margin: 0 0 1rem;
 }
 
 .entire_form {
@@ -15,8 +18,7 @@
 
 .form_label_date_picker,
 .form_label_amount,
-.form_label_email,
-.total_price_text {
+.form_label_email {
   color: #a86e5f;
   font-weight: 800;
   text-align: center;
@@ -29,6 +31,10 @@
 .form_label_email,
 .total_price_text {
   margin: 0.25rem 0.5rem 0.25rem;
+}
+
+.total_price_text {
+  font-weight: 700;
 }
 
 .date_picker_container {
@@ -67,7 +73,9 @@
 .missing_item_error,
 .missing_dish_error,
 .missing_drink_error,
-.return_error {
+.return_error,
+.date_error,
+.email_error {
   color: red;
   text-align: center;
   padding: 1rem;
@@ -94,4 +102,21 @@
   color: white;
   padding: 0.5rem 1rem;
   margin: 0.25rem 0 0.5rem;
+}
+
+.order_error_box {
+  width: 80%;
+  background-color: white;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0 0.5rem;
+}
+
+.order_error {
+  color: red;
+  text-align: center;
+  padding: 1rem;
 }
