--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -1,10 +1,28 @@
-.drinks_container {
+.drinks_container,
+.drinks_error_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0;
   margin: 0 0 1rem;
+}
+
+.drinks_error_box {
+  width: 80%;
+  background-color: white;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0 0.5rem;
+}
+
+.drinks_error {
+  color: red;
+  text-align: center;
+  padding: 1rem;
 }
 
 .all_drinks_box {
