--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -1,15 +1,16 @@
 .form_container,
-.order_error_container {
+.order_error_container,
+.missing_items_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 1rem;
+  margin: 0 0 0.125rem;
 }
 
 .entire_form {
-  width: 80%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +31,7 @@
 .form_label_amount,
 .form_label_email,
 .total_price_text {
-  margin: 0.25rem 0.5rem 0.25rem;
+  margin: 0.125rem 0.5rem;
 }
 
 .total_price_text {
@@ -61,12 +62,11 @@
 }
 
 .amount_number {
-  font-size: 2rem;
+  font-size: 5rem;
 }
 
 .amount_icon {
-  width: 20px;
-  font-size: 4rem;
+  font-size: 5rem;
 }
 
 .amount_error,
@@ -91,8 +91,8 @@
   border: 2px solid #a86e5f;
   width: 50%;
   display: block;
-  margin: 0.25rem auto;
-  padding: 0.5rem 1rem;
+  margin: 0.125rem auto;
+  padding: 2rem 3rem;
 }
 
 .submit_button {
@@ -100,19 +100,20 @@
   background-color: #a86e5f;
   border-radius: 0.5rem;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 2rem 3rem;
   margin: 0.25rem 0 0.5rem;
 }
 
-.order_error_box {
-  width: 80%;
+.order_error_box,
+.missing_items_box {
+  width: 95%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem 0 0.5rem;
+  margin: 0.25rem 0;
 }
 
 .order_error {
