--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -5,18 +5,18 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 1rem;
+  margin: 0 0 0.125rem;
 }
 
 .drinks_error_box {
-  width: 80%;
+  width: 95%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem 0 0.5rem;
+  margin: 0.25rem 0 0.25rem;
 }
 
 .drinks_error {
@@ -27,7 +27,7 @@
 
 .all_drinks_box {
   background-color: white;
-  width: 80%;
+  width: 95%;
   height: 40vh;
   border-radius: 1rem;
   justify-content: center;
@@ -56,7 +56,7 @@
   height: 6rem;
   border-radius: 1rem;
   position: relative;
-  margin: 0 0 0.5rem;
+  margin: 0 0 0.25rem;
 }
 
 .drink_image {
@@ -71,8 +71,9 @@
   transform: translate(-50%, -50%);
   font-size: 3rem;
   font-weight: 900;
-  text-shadow: black 1px 1px 2px;
-  color: #a86e5f;
+  text-shadow: 2px 2px 0px white, -2px -2px 0px white, 2px -2px 0px white,
+    -2px 2px 0px white;
+  color: black;
 }
 
 .selected_drinks_container {
@@ -81,11 +82,11 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 1rem 0;
+  margin: 0.25rem 0 0.5rem;
 }
 
 .selected_drinks_box {
-  width: 80%;
+  width: 95%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
@@ -99,7 +100,7 @@
 .drink_and_delete {
   display: flex;
   width: 80%;
-  height: 2rem;
+  height: 4rem;
   justify-content: space-around;
   align-items: center;
 }
@@ -113,6 +114,7 @@
 .remove_drink_button {
   color: red;
   width: 50%;
+  font-size: 2.5rem;
 }
 
 .drinks_price {
