--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -4,9 +4,16 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 1rem;
+  margin: 0 0 0.125rem;
 }
-.order_container,
+.order_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0.125rem 0 0.25rem;
+}
 .error_container,
 .form_container {
   display: flex;
@@ -14,7 +21,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 1rem 0;
+  margin: 0.25rem 0;
 }
 
 .map_container {
@@ -23,12 +30,12 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 1rem 0 2rem;
+  margin: 0.25rem 0 2rem;
 }
 
 .embla {
   position: relative;
-  width: 80%;
+  width: 95%;
   height: auto;
 }
 
@@ -51,8 +58,8 @@
 
 .carousel_button_left,
 .carousel_button_right {
-  height: 2rem;
-  width: 2rem;
+  height: 3rem;
+  width: 3rem;
   border-radius: 100%;
   display: flex;
   align-items: center;
@@ -75,14 +82,14 @@
 }
 
 .chevron_buttons {
-  height: 2rem;
-  width: 2rem;
+  height: 3rem;
+  width: 3rem;
 }
 
 .order_box,
 .form,
 .map_box {
-  width: 80%;
+  width: 95%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
@@ -95,13 +102,13 @@
 .map_text {
   color: #a86e5f;
   font-weight: 500;
-  margin: 0.5rem 0.5rem 0.25rem;
+  margin: 0.125rem 0.5rem;
   text-align: center;
 }
 
 .submit_button {
   margin-top: 0.25rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .submit_button {
@@ -109,7 +116,7 @@
   background-color: #a86e5f;
   border-radius: 0.5rem;
   color: white;
-  padding: 0.5rem 1rem;
+  padding: 2rem 3rem;
 }
 
 .submit_button:hover {
@@ -130,14 +137,14 @@
 .form_input {
   border: #a86e5f solid 1px;
   border-radius: 1rem;
-  padding: 0.25rem;
+  padding: 2rem 3rem;
   text-align: center;
-  margin: 0.25rem;
+  margin: 0.125rem;
 }
 
 .form_label {
   color: #a86e5f;
   font-weight: 500;
-  margin: 0.5rem 0.5rem 0.25rem 0.5rem;
+  margin: 0.25rem 0.5rem 0.125rem 0.5rem;
   text-align: center;
 }
