--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0.125rem 0 0.25rem;
+  margin: 0 0 0.25rem;
 }
 .error_container,
 .form_container {
@@ -147,4 +147,30 @@
   font-weight: 500;
   margin: 0.25rem 0.5rem 0.125rem 0.5rem;
   text-align: center;
+}
+
+@media (min-width: 640px) {
+  .homepage_buttons {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+    gap: 1rem;
+  }
+
+  .order_container {
+    width: 50%;
+  }
+
+  .order_box {
+    width: 100%;
+    height: 100%;
+    gap: 2rem;
+  }
+
+  .form_container {
+    width: 50%;
+  }
+  .form {
+    width: 100%;
+  }
 }
