--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -94,6 +94,7 @@
   justify-content: center;
   align-items: center;
   padding: 1rem 0 0.5rem;
+  margin: 0 0 0.125rem;
   color: #a86e5f;
 }
 
@@ -121,4 +122,37 @@
   font-weight: 700;
   margin: 0.25rem 0.5rem 0.25rem;
   color: black;
+}
+
+@media (min-width: 640px) {
+  .all_drinks_box,
+  .selected_drinks_box,
+  .drinks_error_box {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .drinks_page {
+    margin: 0 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .drinks_container,
+  .drinks_error_container {
+    width: 70%;
+    margin-right: 1rem;
+  }
+
+  .selected_drinks_container {
+    width: 30%;
+  }
+
+  .selected_drinks_box {
+    padding: 1rem 0;
+  }
+
+  .drink_and_delete {
+    width: 100%;
+  }
 }
