--- a/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
+++ b/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
@@ -5,7 +5,11 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 1rem;
+  margin: 0 0 0.125rem;
+}
+
+.receipt_screen {
+  margin-bottom: 0.5rem;
 }
 
 .receipt_box,
@@ -17,7 +21,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem 0 0.5rem;
+  margin: 0.5rem 0 0.125rem;
   text-align: center;
 }
 
@@ -42,4 +46,27 @@
 .receipt_error {
   color: red;
   padding: 1rem;
+}
+
+@media (min-width: 640px) {
+  .receipt_screen {
+    display: flex;
+    align-items: flex-start;
+    margin: 1rem;
+  }
+
+  .receipt_container {
+    width: 70%;
+    margin: 0 1rem 0 0;
+    display: flex;
+  }
+
+  .receipt_box {
+    margin: 0.125rem;
+    width: 100%;
+  }
+
+  .receipt_return_button {
+    width: 30%;
+  }
 }
