--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -108,7 +108,7 @@ some parts of it requires it to be in globals.css */
   font-size: 16px;
   text-align: center;
   border: 2px solid #a86e5f;
-  width: 50%;
+  width: 25%;
   display: block;
   margin: 0.25rem auto;
   padding: 2rem 3rem;
@@ -124,4 +124,23 @@ some parts of it requires it to be in globals.css */
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+@media (min-width: 640px) {
+  .react-datepicker__input-container {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .react-datepicker-wrapper {
+    width: auto;
+  }
+
+  .date_picker {
+    margin: 0;
+    width: auto;
+  }
 }
