--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -62,11 +62,11 @@
 }
 
 .amount_number {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 .amount_icon {
-  font-size: 5rem;
+  font-size: 3rem;
 }
 
 .amount_error,
@@ -89,10 +89,11 @@
   border-radius: 1rem;
   text-align: center;
   border: 2px solid #a86e5f;
-  width: 50%;
+  width: 125px;
+
   display: block;
   margin: 0.125rem auto;
-  padding: 2rem 3rem;
+  padding: 1rem 3rem;
 }
 
 .submit_button {
@@ -100,7 +101,7 @@
   background-color: #a86e5f;
   border-radius: 0.5rem;
   color: white;
-  padding: 2rem 3rem;
+  padding: 1rem 1.5rem;
   margin: 0.25rem 0 0.5rem;
 }
 
@@ -155,6 +156,17 @@
 @media (min-width: 640px) {
   .missing_items_container {
     padding: 1rem;
+  }
+
+  .email_and_error {
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .email_input {
+    margin: 0;
+    width: 170px;
   }
 
   .missing_items_box {
