--- a/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
+++ b/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
@@ -48,6 +48,25 @@
   padding: 1rem;
 }
 
+.receipt_images {
+  display: none;
+}
+
+.dish_image_container {
+  display: none;
+}
+
+.dish_image {
+  display: none;
+}
+.drinks_content {
+  display: none;
+}
+
+.receipt_drinks_image {
+  display: none;
+}
+
 @media (min-width: 640px) {
   .receipt_screen {
     display: flex;
@@ -68,5 +87,62 @@
 
   .receipt_return_button {
     width: 30%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .receipt_box,
+  .receipt_error_box {
+    text-align: start;
+  }
+
+  .receipt_container {
+    margin: 1rem;
+  }
+  .receipt_box {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem;
+    margin: 1rem;
+    width: 100%;
+  }
+
+  .receipt_images {
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .dish_image_container {
+    position: relative;
+    display: block;
+    width: 100px;
+    height: 100px;
+  }
+
+  .dish_image {
+    display: block;
+    object-fit: cover;
+    border-radius: 1rem;
+  }
+
+  .drink_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .drinks_content {
+    display: block;
+    position: relative;
+    margin: 2.5px;
+    height: 45px;
+    width: 45px;
+  }
+
+  .receipt_drinks_image {
+    display: block;
+    object-fit: cover;
+    border-radius: 1rem;
   }
 }
