--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -6,10 +6,24 @@
   align-items: center;
   padding: 0;
   margin: 0 0 0.125rem;
+  width: 100%;
+}
+
+.drinks_error_container {
+  height: 40vh;
+}
+
+.drinks_page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: auto;
 }
 
 .drinks_error_box {
   width: 95%;
+  height: 50%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
@@ -83,6 +97,7 @@
   align-items: center;
   padding: 0;
   margin: 0.25rem 0 0.5rem;
+  width: 100%;
 }
 
 .selected_drinks_box {
@@ -177,5 +192,11 @@
 
   .selected_drinks_container {
     margin: 0;
+  }
+}
+
+@media (min-width: 1201px) {
+  .drinks_page {
+    width: 1201px;
   }
 }
