1st version of loading finished

--- a/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
+++ b/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
@@ -37,7 +37,7 @@
   font-weight: 900;
 }
 
-.receipt_total_price {
+.receipt_price {
   font-weight: 700;
   margin: 0.25rem 0.5rem 0.25rem;
   color: black;
