--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -102,10 +102,15 @@ main {
 }
 
 .loader {
+  margin-top: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.fetching_image {
+  border-radius: 1rem;
 }
 
 .loading_text {
