--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -15,7 +15,7 @@
 
 .drinks_page {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   min-height: auto;
