--- a/lil-bits/src/app/(routes)/select-dish/dish.module.css
+++ b/lil-bits/src/app/(routes)/select-dish/dish.module.css
@@ -46,12 +46,24 @@
   margin: 0.25rem 0.5rem 0.5rem;
 }
 
+.dish_description_title {
+  color: #a86e5f;
+  text-align: center;
+}
+
 .dish_description_text,
 .current_order_dish {
   color: #a86e5f;
   font-weight: 500;
   margin: 0.25rem 0.5rem 0.25rem;
+}
+
+.current_order_dish {
   text-align: center;
+}
+
+.dish_description_text {
+  text-align: start;
 }
 
 .current_order_text {
