--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -196,7 +196,7 @@
   .map_container {
     grid-column: 1/3;
     grid-row: 3/4;
-    margin-top: 0.5rem 1rem 1rem 1rem;
+    margin: 0.5rem 1rem 1rem 1rem;
   }
 }
 
