--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -1,5 +1,4 @@
 .form_container,
-.order_error_container,
 .missing_items_container {
   display: flex;
   flex-direction: column;
@@ -7,6 +6,14 @@
   align-items: center;
   padding: 0;
   margin: 0 0 0.125rem;
+}
+
+.order_error_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.7rem 0 1rem;
 }
 
 .entire_form {
@@ -45,6 +52,7 @@
   align-items: center;
   border-radius: 2rem;
   width: 100%;
+  margin: 0 0 0.7rem;
 }
 
 .amount_container {
@@ -52,6 +60,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 0 0.7rem;
 }
 
 .amount_selector {
@@ -102,7 +111,7 @@
   border-radius: 0.5rem;
   color: white;
   padding: 1rem 1.5rem;
-  margin: 0.25rem 0 0.5rem;
+  margin: 0;
 }
 
 .order_error_box,
@@ -139,17 +148,20 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  margin: 0 0 0.7rem;
 }
 
 .email_and_error {
   display: flex;
   flex-direction: column;
+  margin: 0 0 0.7rem;
 }
 
 .price_and_submit {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 0.7rem;
   align-items: center;
 }
 
