--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 0.125rem;
+  margin: 0 0 0.7rem;
   width: 100%;
 }
 
@@ -19,6 +19,7 @@
   align-items: center;
   flex-direction: column;
   min-height: auto;
+  margin: 0 0.25rem;
 }
 
 .drinks_error_box {
@@ -41,7 +42,7 @@
 
 .all_drinks_box {
   background-color: white;
-  width: 95%;
+  width: 100%;
   height: 40vh;
   border-radius: 1rem;
   justify-content: center;
@@ -96,20 +97,19 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0.25rem 0 0.5rem;
+  margin: 0 0 1rem;
   width: 100%;
 }
 
 .selected_drinks_box {
-  width: 95%;
+  width: 100%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem 0 0.5rem;
-  margin: 0 0 0.125rem;
+  padding: 1rem 0 1rem;
   color: #a86e5f;
 }
 
