--- a/lil-bits/src/app/globals.css
+++ b/lil-bits/src/app/globals.css
@@ -87,7 +87,7 @@ main {
   border-radius: 1rem;
   color: white;
   padding: 1rem 1.5rem;
-  margin: 0.125rem 0 0.125rem;
+  margin: 0 0 0.7rem;
 }
 
 .link_button:hover,
