Add and fix hover colors

--- a/lil-bits/src/app/(routes)/order-screen/order.module.css
+++ b/lil-bits/src/app/(routes)/order-screen/order.module.css
@@ -113,6 +113,10 @@
   margin: 0;
 }
 
+.submit_button:hover {
+  background-color: #575e43;
+}
+
 .order_error_box,
 .missing_items_box {
   width: 95%;
