--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -64,6 +64,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0.5rem;
 }
 
 .image_and_counter {
@@ -117,6 +118,7 @@
   display: flex;
   width: 80%;
   height: 4rem;
+  padding: 0.5rem 0;
   justify-content: space-around;
   align-items: center;
 }
