--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -88,8 +88,6 @@
   width: 3rem;
 }
 
-.order_box,
-.form,
 .map_box {
   width: 100%;
   background-color: white;
@@ -100,15 +98,38 @@
   align-items: center;
 }
 
-.map_box {
-  padding-bottom: 1rem;
+.order_box {
+  width: 100%;
+  background-color: white;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-.order_text,
-.map_text {
+.form {
+  width: 100%;
+  background-color: white;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.order_text {
   color: #a86e5f;
   font-weight: 500;
   margin: 0.125rem 0.5rem;
+  text-align: center;
+}
+
+.map_text {
+  color: #a86e5f;
+  font-weight: 500;
+  margin: 0.5rem 0.5rem 0;
   text-align: center;
 }
 
@@ -118,8 +139,8 @@
   border-radius: 0.5rem;
   color: white;
   padding: 1rem 1.5rem;
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 
 .submit_button:hover {
@@ -133,7 +154,9 @@
 }
 
 .map_div {
-  width: 90%;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.5rem;
   height: 300px;
 }
 
@@ -148,7 +171,7 @@
 .form_label {
   color: #a86e5f;
   font-weight: 500;
-  margin: 0.25rem 0.5rem 0.125rem 0.5rem;
+  margin: 0.5rem 0.5rem 0 0.5rem;
   text-align: center;
 }
 
