--- a/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
+++ b/lil-bits/src/app/(routes)/select-drinks/drinks.module.css
@@ -1,18 +1,4 @@
-.drinks_container,
-.drinks_error_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0 0 0.7rem;
-}
-
-.drinks_error_container {
-  height: 40vh;
-}
-
-.drinks_page {
+.entire_drinks_page {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,8 +7,23 @@
   margin: 0 0.25rem;
 }
 
+.drinks_container,
+.drinks_error_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0 0 0.7rem;
+  width: 100%;
+}
+
+.drinks_error_container {
+  height: 40vh;
+}
+
 .drinks_error_box {
-  width: 95%;
+  width: 100%;
   height: 50%;
   background-color: white;
   border-radius: 1rem;
@@ -30,7 +31,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0.25rem 0 0.25rem;
+  margin: 0.25rem 0.25rem 0.25rem;
 }
 
 .drinks_error {
@@ -148,7 +149,8 @@
     width: 100%;
     margin-bottom: 1rem;
   }
-  .drinks_page {
+
+  .entire_drinks_page {
     margin: 0 1rem;
     display: flex;
     flex-direction: row;
@@ -160,7 +162,6 @@
     width: 70%;
     margin-right: 1rem;
   }
-
   .selected_drinks_container {
     width: 30%;
   }
@@ -175,7 +176,7 @@
 }
 
 @media (min-width: 1024px) {
-  .drinks_page {
+  .entire_drinks_page {
     height: fit-content;
   }
   .drinks_container {
@@ -198,7 +199,7 @@
 }
 
 @media (min-width: 1201px) {
-  .drinks_page {
+  .entire_drinks_page {
     width: 1201px;
   }
 }
