--- a/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
+++ b/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 0 0.7rem;
+  margin: 0 0.25rem 0.7rem;
   height: 100%;
 }
 
@@ -15,7 +15,7 @@
 
 .receipt_box,
 .receipt_error_box {
-  width: 80%;
+  width: 100%;
   background-color: white;
   border-radius: 1rem;
   display: flex;
