Add comments to css

--- a/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
+++ b/lil-bits/src/app/(routes)/receipt-screen/receipt.module.css
@@ -158,6 +158,8 @@
 }
 
 @media (min-width: 1201px) {
+  /* Making entire page this size, so it looks ok on bigger screens */
+
   .receipt_screen {
     width: 1201px;
   }
