--- a/lil-bits/src/app/(routes)/select-dish/dish.module.css
+++ b/lil-bits/src/app/(routes)/select-dish/dish.module.css
@@ -20,6 +20,7 @@
   position: relative;
 }
 
+/* Dish image size controlled by parents */
 .dish_image {
   object-fit: cover;
   border-radius: 1rem;
@@ -36,6 +37,7 @@
   align-items: center;
 }
 
+/* Put overflow here so text doesn't fill entire screen */
 .dish_description_scroll {
   overflow: scroll;
   overflow-x: hidden;
@@ -127,6 +129,7 @@
 }
 
 @media (min-width: 640px) {
+  /* Change to row on bigger screens */
   .dish_container {
     flex-direction: row;
     align-items: flex-start;
@@ -174,6 +177,7 @@
 }
 
 @media (min-width: 1201px) {
+  /* Making entire page this size, so it looks ok on bigger screens */
   .dish_container {
     width: 1201px;
     height: 100%;
