--- a/lil-bits/src/app/page.module.css
+++ b/lil-bits/src/app/page.module.css
@@ -53,6 +53,8 @@
   margin-right: 1rem;
 }
 
+/* Carousel images sizes are controlled by parents */
+
 .carousel_images {
   object-fit: cover;
   border-radius: 1rem;
@@ -153,6 +155,7 @@
   padding: 1rem;
 }
 
+/* map width controlled by parents */
 .map_div {
   box-sizing: border-box;
   width: 100%;
@@ -176,6 +179,8 @@
 }
 
 @media (min-width: 640px) {
+  /* Changing view to grid so it is easier to control */
+
   .entire_home_page {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -224,6 +229,8 @@
 }
 
 @media (min-width: 1024px) {
+  /* Make grid bigger to make it prettier */
+
   .entire_home_page {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -281,6 +288,7 @@
 }
 
 @media (min-width: 1201px) {
+  /* Making entire page this size, so it looks ok on bigger screens */
   .entire_home_page {
     width: 1201px;
   }
